@@ -90,7 +90,7 @@ void Rf_InitColors(void);
 SEXP R_compress1(SEXP);
 SEXP R_decompress1(SEXP);
 
-SEXP R_serializeb(SEXP, SEXP, SEXP, SEXP);
+SEXP R_serializeb(SEXP, SEXP, SEXP, SEXP, SEXP);
 SEXP R_serialize(SEXP, SEXP, SEXP, SEXP, SEXP);
 SEXP R_unserialize(SEXP, SEXP);
 
